--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,25 @@
+:root {
+    --infra-red: #ff3e79;
+    --infra-red-lighter: #ff828c;
+    --infra-red-darker: #da104c;
+
+    --aquamarine: #41f6d7;
+    --aquamarine-lighter: #b8ffec;
+    --aquamarine-darker: #00ccaa;
+
+    --text-primary: #1b1c21;
+    --text-navigation: #7e7e82;
+
+    --back-primary: #f8f8f8;
+    --back-secondary: white;
+
+    --line-color: #eaeaea;
+
+    --duration-very-fast: .05s;
+    --duration-fast: .1s;
+    --duration-medium: .2s;
+    --duration-long: .3s
+}
 
 html {
     -webkit-box-sizing: border-box;
@@ -6,10 +28,10 @@ html {
     font-family: "TTLakes";
     font-weight: normal;
     font-size: 16px;
-    color: #1b1c21;
+    color: var(--text-primary);
 
     min-width: 320px;
-    background-color: #f8f8f8;
+    background-color: var(--back-primary);
 }
 
 *,
@@ -19,23 +41,6 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-}
-
-.list {
-    display: flex;
-    list-style: none;
-}
-
-.link,
-.btn {
-    border: none;
-    padding: 0;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.hidden.hidden {
-    display: none;
 }
 
 .hidden-visible {
